fix image width on small screens

--- a/assets/styles/_wallpapers.scss
+++ b/assets/styles/_wallpapers.scss
@@ -61,7 +61,10 @@
             flex: 0 1 33%;
         }
         @media #{$small-screen} {
-            flex: 0 1 50%;
+            display: block;
+            max-height: 100vh;
+            padding: 10px 20px;
+            margin: 0 auto;
         }
     }
     .image-group.desktop {
