--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -950,9 +950,10 @@ main.project .column2 {
 
 @media (max-width: 500px) {
   .wallpapers img {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
+    display: block;
+    max-height: 100vh;
+    padding: 10px 20px;
+    margin: 0 auto;
   }
 }
 
